Fix OPA home link alignment.

--- a/site/_assets/stylesheets/style.scss
+++ b/site/_assets/stylesheets/style.scss
@@ -132,6 +132,7 @@ strong {
     float: left;
     font-size: 16px;
     line-height: 24px;
+    margin: 0;
 
     &--selected {
       border-bottom: solid 2px #444;
@@ -139,6 +140,7 @@ strong {
       float: left;
       font-size: 16px;
       line-height: 24px;
+      margin: 0;
     }
   }
 
